samples/_failures_safe/1761430121_03eb45_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f7acf254.c: In function ‘main’:
./samples/SAFE/__tmp_f7acf254.c:152:13: error: expected identifier at end of input
  152 |             mat2.
      |             ^~~~
./samples/SAFE/__tmp_f7acf254.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f7acf254.c:152:13: error: expected declaration or statement at end of input
